--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"axios": "^1.7.3",
 		"cors": "^2.8.5",
 		"express": "^4.19.2",
 		"helmet": "^7.1.0",
